--- a/.github/workflows/main_quizcreate.yml
+++ b/.github/workflows/main_quizcreate.yml
@@ -1,7 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
 name: Build and deploy Python app to Azure Web App - QuizCreate
 
 on:
@@ -21,6 +17,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.11'
+
+      - name: Install system dependencies
+        run: sudo apt-get update && sudo apt-get install -y python3-dev gcc libblas-dev liblapack-dev gfortran
 
       - name: Create and start virtual environment
         run: |
