--- a/.github/workflows/main_quizcreate.yml
+++ b/.github/workflows/main_quizcreate.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Python version
         uses: actions/setup-python@v2
         with:
-          python-version: '3.9'
+          python-version: '3.11'
 
       - name: Install system dependencies
         run: sudo apt-get update && sudo apt-get install -y python3-dev gcc libblas-dev liblapack-dev gfortran
@@ -30,8 +30,11 @@ jobs:
         run: python -m pip install --upgrade pip
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
-
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
       - name: Upload artifact for deployment jobs
