--- a/.github/workflows/main_quizcreate.yml
+++ b/.github/workflows/main_quizcreate.yml
@@ -34,6 +34,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y build-essential
           python -m pip install --upgrade pip
+          pip install numpy
           pip install -r requirements.txt
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
