--- a/.github/workflows/main_quizcreate.yml
+++ b/.github/workflows/main_quizcreate.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Python version
         uses: actions/setup-python@v2
         with:
-          python-version: '3.10'
+          python-version: '3.9'
 
       - name: Install system dependencies
         run: sudo apt-get update && sudo apt-get install -y python3-dev gcc libblas-dev liblapack-dev gfortran
@@ -25,17 +25,12 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
 
       - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential
-          python -m pip install --upgrade pip
-          pip install numpy
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
+
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
       - name: Upload artifact for deployment jobs
@@ -45,7 +40,6 @@ jobs:
           path: |
             . 
             !venv/
-
   deploy:
     runs-on: ubuntu-latest
     needs: build
